--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,17 @@ button {
   color: var(--body-text);
 }
 
+.sec-btn {
+  padding: 12px 17px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  color: #fff;
+}
+
+.sec-btn:hover {
+  color: #fff;
+}
+
 nav {
   width: 100%;
   padding: 10px 0;
