--- a/src/App.css
+++ b/src/App.css
@@ -250,13 +250,14 @@ nav {
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.16);
   background-size: cover;
   position: relative;
+  background-position: center;
 }
 
 .portfolio-card-overlay {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.7);
   border-radius: 10px;
   display: flex;
   align-items: center;
